Add CLI flags to run-benchmark.sh and rename *_TASKSET to *_CPUSET